# flask-aggregator

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt
back/: config.py  file_handler.py  get_cluster_list.py  get_data_center_list.py  get_host_list.py  get_storage_domain_list.py  get_vm_configs_json.py  get_vm_list.py  logger.py  ovirt_helper.py  run_collector.py  virt_aggregator.py  virt_protocol.py
back/files/: cluster_list.json  data_center_list.json  domain_list.json  host_list.json  storage_domain_list.json  vm_list.json
front/: app.py
front/templates/: ovirt_cluster_list.html  ovirt_data_center_list.html  ovirt_host_list.html  ovirt_storage_domain_list.html  ovirt_vm_list.html  ovirt_vms.html
linux/: install.sh  uninstall.sh  update.sh
linux/app/: .env.example  flask_aggregator-0.0.1-py3-none-any.whl  flask_aggregator-2024.12.11-py3-none-any.whl  flask_aggregator-2024.12.12-py3-none-any.whl  flask_aggregator-2024.12.12.1-py3-none-any.whl  flask_aggregator-2024.12.13-py3-none-any.whl  flask_aggregator-2024.12.13.1-py3-none-any.whl  flask_aggregator-2024.12.17-py3-none-any.whl  flask_aggregator-2024.12.17.1-py3-none-any.whl  flask_aggregator-2024.12.20.post0+dirty-py3-none-any.whl  flask_aggregator-2024.12.3-py3-none-any.whl  flask_aggregator-2024.12.6.1-py3-none-any.whl  flask_aggregator-2025.1.14-py3-none-any.whl  flask_aggregator-2025.1.15-py3-none-any.whl  flask_aggregator-2025.1.23.post0+dirty-py3-none-any.whl  flask_aggregator-2025.1.24-py3-none-any.whl  flask_aggregator-2025.1.24.1-py3-none-any.whl  flask_aggregator-2025.10.1.post0+dirty-py3-none-any.whl  latest.whl  requirements.txt  start_server.sh
linux/etc/nginx/conf.d/: aggregator.conf
linux/etc/systemd/system/: aggregator-collector-backups.service  aggregator-collector-backups.timer  aggregator-collector-elma-vm-access-doc.service  aggregator-collector-elma-vm-access-doc.timer  aggregator-collector-hosts.service  aggregator-collector-hosts.timer  aggregator-collector-storages.service  aggregator-collector-storages.timer  aggregator-collector-vms.service  aggregator-collector-vms.timer  aggregator.target  (+1 more)
src/client/: config.py  file_handler.py  parser.py  run_parser.py
src/flask_aggregator/: config.py
src/flask_aggregator/back/: config.py  connections.py  controllers.py  cyberbackup_helper.py  db.py  dbmanager.py  elma_helper.py  file_handler.py  logger.py  models.py  ovirt_helper.py  run_collector.py  runners.py  view_object.py  virt_aggregator.py  virt_protocol.py  virtuozzo_helper.py
src/flask_aggregator/front/: app.py  view.py
src/flask_aggregator/tests/: test_task_manager.py
src/server/: config.py
src/server/back/: config.py  dbmanager.py  file_handler.py  models.py  ovirt_helper.py  sqlite_handler.py  virt_aggregator.py  virt_protocol.py
src/server/front/: app.py  forms.py
tests/: test_rosplatforma.py  test_task_manager.py
tests/test_task_manager/: client.py  debug_tools.py  server.py  test_command.py  test_monitor.py  test_strategy.py  test_task_manager.py
(+38 files in other folders)
