[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_aggregator"
version = "2024.12.03"
authors = [
    { name="krasnoschekovvd", email="krasnoschekovvd@rncb.ru" },
]
description = "OITI flask aggregator client-server package"
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
flask_aggregator_start = "flask_aggregator.front.app:main"

[project.urls]
Homepage = "https://gl.rncb.ru/KrasnoschekovVD/flask_aggregator"
Issues = "https://gl.rncb.ru/KrasnoschekovVD/flask_aggregator/-/issues"
