[build-system]
requires = ["setuptools>=59.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_aggregator"
dynamic = ["version"]
authors = [
    { name="krasnoschekovvd", email="krasnoschekovvd@rncb.ru" },
]
description = "OITI flask aggregator client-server package"
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
flask_aggregator_start = "flask_aggregator.front.app:main"
fa_collect_all_data = "flask_aggregator.back.run.collector.get_all:run"
fa_get_vms = "flask_aggregator.back.run.collector.get_vms:run"
fa_get_hosts = "flask_aggregator.back.run.collector.get_hosts:run"
fa_get_storages = "flask_aggregator.back.run.collector.get_storages:run"
fa_get_clusters = "flask_aggregator.back.run.collector.get_clusters:run"
fa_get_data_centers = "flask_aggregator.back.run.collector.get_data_centers:run"
fa_get_backups = "flask_aggregator.back.run.collector.get_backups:run"
fa_mon_hosts = "flask_aggregator.back.run.monitoring.get_hosts:run"
fa_mon_storages = "flask_aggregator.back.run.monitoring.get_storages:run"

[project.urls]
Homepage = "https://gl.rncb.ru/KrasnoschekovVD/flask_aggregator"
Issues = "https://gl.rncb.ru/KrasnoschekovVD/flask_aggregator/-/issues"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
